--- a/Pipfile
+++ b/Pipfile
@@ -4,8 +4,8 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-
+pytest = "*"
 [dev-packages]
 
 [requires]
-python_version = "3.8.13"
+python_version = "3.9.1"
